2001-12-17  Roland McGrath  <roland@frob.com>

	* munge.c (input_character): Fix DISCARD character handling
	so it doesn't process the character as plain input.

2001-10-14  Roland McGrath  <roland@frob.com>

	* devio.c (real_speed_to_bogus_speed): Handle B57600, B115200 if they
	are defined.  Reported by Diego Roversi <diegor@tiscalinet.it>.

2001-04-01  Neal H Walfield  <neal@cs.uml.edu>

	* users.c (S_termctty_open_terminal): Use iohelp_create_empty_iouser.

2001-06-01  Roland McGrath  <roland@frob.com>

	* users.c (trivfs_S_io_select): Fix typo in last change.

2001-05-30  Roland McGrath  <roland@frob.com>

	* users.c (trivfs_S_io_select): Mask out SELECT_READ and/or
	SELECT_WRITE if those accesses are not allowed by the peropen.
	Don't keep old bits in AVAILABLE across waits, return only
	what is true at the moment we return.

2001-05-27  Roland McGrath  <roland@frob.com>

	* users.c (trivfs_S_io_select): Don't mask out SELECT_URG bit.
	Just let it never be set in the eventual result.  Yes, this
	can mean blocking forever when SELECT_URG is the only bit set.

2001-05-26  Roland McGrath  <roland@frob.com>

	* users.c (trivfs_S_io_select): Don't diagnose an error for *TYPE
	containing irrelevant bits (i.e. SELECT_URG).  It's always ok to
	ask even when the answer is always no.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* main.c (main): Don't use MAKE_SEND in Hurd RPC.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* devio.c (devio_abandon_physical_output): Use ports_get_send_right.
	(initial_open): Use ports_get_send_right.
	(device_open_reply): Use ports_get_send_right.

	* users.c (send_signal): Use ports_get_send_right.
